--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".service.calenderonly"
+            android:name=".Activity_Profile"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
